# gui-QtPropertyBrowser

./: CMakeLists.txt  README.md  manifest.xml
cmake/: InstallProjectConfig.cmake  InstallSettings.cmake  QtPropertyBrowser-qt4Config.cmake.in  QtPropertyBrowser-qt5Config.cmake.in
examples/canvas_typed/: CMakeLists.txt
examples/canvas_variant/: CMakeLists.txt
examples/decoration/: CMakeLists.txt
examples/demo/: CMakeLists.txt
examples/extension/: CMakeLists.txt
examples/object_controller/: CMakeLists.txt
examples/simple/: CMakeLists.txt
src/: CMakeLists.txt  qtbuttonpropertybrowser.cpp  qteditorfactory.cpp  qteditorfactory.h  qteditorfactory_p.h  qtgroupboxpropertybrowser.cpp  qtpropertybrowser.cpp  qtpropertybrowser.h  qtpropertybrowserutils.cpp  qtpropertybrowserutils_p.h  qtpropertymanager.cpp  qtpropertymanager.h  qtpropertymanager_p.h  qttreepropertybrowser.cpp  qttreepropertybrowser_p.h  qtvariantproperty.cpp  qtvariantproperty.h
